--- a/mikrotik-update-ros-from-mikrotik-servers.yml
+++ b/mikrotik-update-ros-from-mikrotik-servers.yml
@@ -1,31 +1,35 @@
 ---
-# An Ansible Playbook to mass update the ROS version on MikroTik routers
-# Version 1 - 08/01/2017
-#
-- name: Mikrotik ROS Update
-  hosts: mikrotik
-# serial: 1 # executes one host at a time
+# An Ansible Playbook to backup the Mikrotik device's configuration to file
+# Version 2 - 31/12/2010
 
-  connection: paramiko
-  user: admin
-  gather_facts: no
+# By Vojtech Jurcik
+# Many thanks to Wynand Booysen (wynandbooysen)
+################
+### RouterOS ###
+################
+- name: Mikrotik RouterOS Update
+  hosts: router
+  connection: network_cli
+  gather_facts: true
   tasks:
    - name: Check if updates required
-     raw: /system package update check-for-updates
+     routeros_command: 
+       commands: system package update check-for-updates
      register: updatecheck
 
-
    - name: Run package updates and reboot if needed
-     when: updatecheck.stdout.find('System is already up to date') == -1
-     raw: /system package update download
+     when: updatecheck is search("System is already up to date") == -1  
+     routeros_command: 
+        commands: system package update download
      register: download
      until: download.stdout.find('please reboot router') > -1
      retries: 3
      delay: 60
 
-   - name: Reboot the Router if the download is successful
-     when: (updatecheck.stdout.find('System is already up to date') == -1) and (download.stdout.find('please reboot router') > -1)
-     raw: /system reboot
+   - name: Reboot the Router if the download is successful                    
+     when: (updatecheck is search("System is already up to date") == -1) and (download is search("'please reboot router") > -1)
+     routeros_command: 
+       commands: system reboot
      register: reboot
      async: 0
      poll: 0
