--- a/mikrotik-update-ros-from-mikrotik-servers.yml
+++ b/mikrotik-update-ros-from-mikrotik-servers.yml
@@ -7,29 +7,17 @@
 ################
 ### RouterOS ###
 ################
-- name: Mikrotik RouterOS Update
-  hosts: router
-  connection: network_cli
-  gather_facts: true
+
+- name: Mikrotik Update
+  hosts: routers
+  serial: 1
+  connection: network_cli 
+  user: admin
+  gather_facts: no
   tasks:
-   - name: Check if updates required
-     routeros_command: 
-       commands: system package update check-for-updates
-     register: updatecheck
-
-   - name: Run package updates and reboot if needed
-     when: updatecheck is search("System is already up to date") == -1  
-     routeros_command: 
-        commands: system package update download
-     register: download
-     until: download.stdout.find('please reboot router') > -1
-     retries: 3
-     delay: 60
-
-   - name: Reboot the Router if the download is successful                    
-     when: (updatecheck is search("System is already up to date") == -1) and (download is search("'please reboot router") > -1)
-     routeros_command: 
-       commands: system reboot
-     register: reboot
-     async: 0
-     poll: 0
+  - name: Check for package updates
+    routeros_command:
+      commands: system package update check-for-updates
+  - name: Run package updates and reboot if needed
+    routeros_command:
+      commands: system package update install 
