--- a/mikrotik-update-ros-from-mikrotik-servers.yml
+++ b/mikrotik-update-ros-from-mikrotik-servers.yml
@@ -9,7 +9,7 @@
 ################
 
 - name: Mikrotik Update
-  hosts: routers
+  hosts: router
   serial: 1
   connection: network_cli 
   user: admin
